--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <div class="about-text">
             <h2>About PACLIC</h2>
             <p>The Pacific Asia Conference on Language, Information and Computation (PACLIC) is a premier annual international conference that has brought together researchers in linguistics, computational linguistics, and natural language processing for four decades. Since 1987, PACLIC has served as a vital forum for advancing language science across the Asia-Pacific region and beyond.</p>
-            <p>PACLIC 40 will be hosted in <strong>Taipei, Taiwan</strong> — a vibrant intellectual and cultural hub where cutting-edge technology meets rich linguistic diversity. This milestone 40th edition invites scholars worldwide to explore the intersections of language, computation, and cultural diversity in the age of artificial intelligence.</p>
+            <p>PACLIC 40 will be hosted in <strong>Taipei, Taiwan</strong>, a vibrant intellectual and cultural hub where cutting-edge technology meets rich linguistic diversity. This milestone 40th edition invites scholars worldwide to explore the intersections of language, computation, and cultural diversity in the age of artificial intelligence.</p>
           </div>
         </div>
 
@@ -393,9 +393,9 @@
         <div class="block reveal">
           <div class="block-header"><h2>Social Events</h2></div>
           <div class="events-grid">
-            <div class="event-card"><div class="event-icon">🥢</div><h3>Welcome Dinner</h3><p class="event-date">Thursday, December 10 · Evening</p><p>An informal gathering to welcome all participants to Taipei — a warm start to three days of scholarly exchange.</p></div>
-            <div class="event-card"><div class="event-icon">🎊</div><h3>Gala Banquet</h3><p class="event-date">Friday, December 11 · Evening</p><p>Experience the richness of Taiwanese cuisine at the conference banquet. A celebration of PACLIC's 40th anniversary.</p></div>
-            <div class="event-card"><div class="event-icon">🏯</div><h3>City Tour</h3><p class="event-date">Saturday, December 12 · Afternoon (Optional)</p><p>A guided tour of Taipei's highlights — from night markets to historic temples and the iconic Taipei 101.</p></div>
+            <div class="event-card"><div class="event-icon">🥢</div><h3>Welcome Dinner</h3><p class="event-date">December · Evening</p><p>An informal gathering to welcome all participants to Taipei — a warm start to three days of scholarly exchange.</p></div>
+            <div class="event-card"><div class="event-icon">🎊</div><h3>Gala Banquet</h3><p class="event-date">December · Evening</p><p>Experience the richness of Taiwanese cuisine at the conference banquet. A celebration of PACLIC's 40th anniversary.</p></div>
+            <div class="event-card"><div class="event-icon">🏯</div><h3>City Tour</h3><p class="event-date">December 12 · Afternoon (Optional)</p><p>A guided tour of Taipei's highlights, from night markets to historic temples and the iconic Taipei 101.</p></div>
           </div>
         </div>
 
@@ -534,7 +534,7 @@
             <svg viewBox="0 0 22 22" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" width="22" height="22"><path d="M4 19.5A2.5 2.5 0 016.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 014 19.5v-15A2.5 2.5 0 016.5 2z"/></svg>
             <h3>Publication Information</h3>
           </div>
-          <p>Accepted papers will be published in the <strong>Proceedings of PACLIC 40</strong> through the <strong>International Society for Language and Linguistics (ISLI)</strong>. Proceedings will be archived and made available online. Selected papers may be invited for extended publication in a special journal issue.</p>
+          <p>Accepted papers will be published in the <strong>Proceedings of PACLIC 40</strong> through the <strong>Institute for the Study of Language and Information (ISLI) at Kyung Hee University</strong>. Proceedings will be archived and made available online. Selected papers may be invited for extended publication in a special journal issue.</p>
           <div class="pub-tags">
             <span class="pub-tag">ISLI Proceedings</span>
             <span class="pub-tag">Open Access</span>
@@ -592,7 +592,7 @@
           <div class="card">
             <div class="card-head">
               <svg viewBox="0 0 22 22" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" width="22" height="22"><polyline points="1 4 1 10 7 10"/><path d="M3.51 15a9 9 0 102.13-9.36L1 10"/></svg>
-              <h3>Refund Policy</h3>
+              <h3>Refund Policy (tentative)</h3>
             </div>
             <ul class="policy-list">
               <li><span class="policy-pct pct-full">100%</span> refund if cancelled before <strong>October 31, 2026</strong></li>
@@ -621,7 +621,7 @@
           </div>
           <div class="venue-info">
             <div class="venue-detail">
-              <strong>Venue:</strong> National Taiwan University (NTU) — Tentative<br/>
+              <strong>Venue:</strong> National Taiwan University (NTU) — More details will be updated soon<br/>
               <strong>Address:</strong> No. 1, Sec. 4, Roosevelt Rd., Da'an District, Taipei City 106<br/>
               <strong>City:</strong> Taipei, Taiwan
             </div>
