--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <div class="about-text">
             <h2>About PACLIC</h2>
             <p>The Pacific Asia Conference on Language, Information and Computation (PACLIC) is a premier annual international conference that has brought together researchers in linguistics, computational linguistics, and natural language processing for four decades. Since 1987, PACLIC has served as a vital forum for advancing language science across the Asia-Pacific region and beyond.</p>
-            <p>PACLIC 40 will be hosted in <strong>Taipei, Taiwan</strong>, a vibrant intellectual and cultural hub where cutting-edge technology meets rich linguistic diversity. This milestone 40th edition invites scholars worldwide to explore the intersections of language, computation, and cultural diversity in the age of artificial intelligence.</p>
+            <p>PACLIC 40 will be hosted in <strong>Taipei, Taiwan</strong> — a vibrant intellectual and cultural hub where cutting-edge technology meets rich linguistic diversity. This milestone 40th edition invites scholars worldwide to explore the intersections of language, computation, and cultural diversity in the age of artificial intelligence.</p>
           </div>
         </div>
 
@@ -248,7 +248,7 @@
               <h3>Important Dates</h3>
             </div>
             <ul class="dates-list">
-              <li class="date-item"><div class="date-badge"><span class="db-mon">AUG</span><span class="db-day">01</span><span class="db-yr">2026</span></div><div class="date-info"><strong>Paper Submission Deadline</strong><span>Possible extension to August 15, 2026</span></div></li>
+              <li class="date-item"><div class="date-badge"><span class="db-mon">AUG</span><span class="db-day">01</span><span class="db-yr">2026</span></div><div class="date-info"><strong>Paper Submission Deadline</strong></div></li>
               <li class="date-item"><div class="date-badge"><span class="db-mon">SEP</span><span class="db-day">30</span><span class="db-yr">2026</span></div><div class="date-info"><strong>Notification of Acceptance</strong></div></li>
               <li class="date-item"><div class="date-badge"><span class="db-mon">OCT</span><span class="db-day">01</span><span class="db-yr">2026</span></div><div class="date-info"><strong>Registration Opens</strong></div></li>
               <li class="date-item"><div class="date-badge"><span class="db-mon">OCT</span><span class="db-day">09</span><span class="db-yr">2026</span></div><div class="date-info"><strong>Camera-Ready Deadline</strong></div></li>
@@ -395,7 +395,7 @@
           <div class="events-grid">
             <div class="event-card"><div class="event-icon">🥢</div><h3>Welcome Dinner</h3><p class="event-date">December · Evening</p><p>An informal gathering to welcome all participants to Taipei — a warm start to three days of scholarly exchange.</p></div>
             <div class="event-card"><div class="event-icon">🎊</div><h3>Gala Banquet</h3><p class="event-date">December · Evening</p><p>Experience the richness of Taiwanese cuisine at the conference banquet. A celebration of PACLIC's 40th anniversary.</p></div>
-            <div class="event-card"><div class="event-icon">🏯</div><h3>City Tour</h3><p class="event-date">December 12 · Afternoon (Optional)</p><p>A guided tour of Taipei's highlights, from night markets to historic temples and the iconic Taipei 101.</p></div>
+            <div class="event-card"><div class="event-icon">🏯</div><h3>City Tour</h3><p class="event-date">December · Afternoon (Optional)</p><p>A guided tour of Taipei's highlights — from night markets to historic temples and the iconic Taipei 101.</p></div>
           </div>
         </div>
 
@@ -524,7 +524,7 @@
             <div class="guide-item"><span class="guide-label">Anonymization</span><p>All submissions must be double-blind anonymous. Remove author names, affiliations, and acknowledgements.</p></div>
             <div class="guide-item"><span class="guide-label">Language</span><p>Submissions must be in English.</p></div>
             <div class="guide-item"><span class="guide-label">Originality</span><p>Submitted papers must describe original, unpublished work not currently under review elsewhere.</p></div>
-            <div class="guide-item"><span class="guide-label">Submission System</span><p>Submissions will be handled via <strong>EasyChair</strong> (link to be announced). Please check back before the submission deadline.</p></div>
+            <div class="guide-item"><span class="guide-label">Submission System</span><p>Submissions will be handled via <strong>CMT</strong> (link to be announced). Please check back before the submission deadline.</p></div>
             <a href="#" class="btn btn-primary mt-1" onclick="return false;">Submission Portal (Coming Soon)</a>
           </div>
         </div>
@@ -592,7 +592,7 @@
           <div class="card">
             <div class="card-head">
               <svg viewBox="0 0 22 22" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" width="22" height="22"><polyline points="1 4 1 10 7 10"/><path d="M3.51 15a9 9 0 102.13-9.36L1 10"/></svg>
-              <h3>Refund Policy (tentative)</h3>
+              <h3>Refund Policy</h3>
             </div>
             <ul class="policy-list">
               <li><span class="policy-pct pct-full">100%</span> refund if cancelled before <strong>October 31, 2026</strong></li>
@@ -702,12 +702,12 @@
             Steering Committee &amp; Ex Officio Members
           </div>
           <div class="member-cards">
-            <div class="member-card"><div class="member-avatar sc"><span>CH</span></div><div class="member-info"><strong>Chu-Ren Huang</strong><span>The Hong Kong Polytechnic University</span></div></div>
-            <div class="member-card"><div class="member-avatar sc"><span>JK</span></div><div class="member-info"><strong>Jong-Bok Kim</strong><span>Kyung Hee University</span></div></div>
+            <div class="member-card"><div class="member-avatar sc"><span>CH</span><img src="images/committee/Chu-Ren Huang.jpg" alt="Chu-Ren Huang"/></div><div class="member-info"><strong>Chu-Ren Huang</strong><span>The Hong Kong Polytechnic University</span></div></div>
+            <div class="member-card"><div class="member-avatar sc"><span>JK</span><img src="images/committee/Jong-Bok Kim.jpg" alt="Jong-Bok Kim"/></div><div class="member-info"><strong>Jong-Bok Kim</strong><span>Kyung Hee University</span></div></div>
             <div class="member-card"><div class="member-avatar sc"><span>YH</span></div><div class="member-info"><strong>Yasunari Harada</strong><span>Waseda University</span></div></div>
-            <div class="member-card"><div class="member-avatar sc"><span>RR</span></div><div class="member-info"><strong>Rachel Edita O. Roxas</strong><span>University of the Philippines, Los Baños</span></div></div>
-            <div class="member-card"><div class="member-avatar sc"><span>SD</span></div><div class="member-info"><strong>Shirley N. Dita</strong><span>De La Salle University, Manila</span></div></div>
-            <div class="member-card"><div class="member-avatar sc"><span>NH</span></div><div class="member-info"><strong>Nguyen Thi Minh Huyen</strong><span>Vietnam National University, Hanoi</span></div></div>
+            <div class="member-card"><div class="member-avatar sc"><span>RR</span><img src="images/committee/Rachel Edita O. Roxas.webp" alt="Rachel Edita O. Roxas"/></div><div class="member-info"><strong>Rachel Edita O. Roxas</strong><span>University of the Philippines</span></div></div>
+            <div class="member-card"><div class="member-avatar sc"><span>SD</span><img src="images/committee/Shirley N. Dita.jpeg" alt="Shirley N. Dita"/></div><div class="member-info"><strong>Shirley N. Dita</strong><span>De La Salle University</span></div></div>
+            <div class="member-card"><div class="member-avatar sc"><span>NH</span><img src="images/committee/nguyen_thi_minh_huyen.jpg" alt="Nguyen Thi Minh Huyen"/></div><div class="member-info"><strong>Nguyen Thi Minh Huyen</strong><span>Vietnam National University</span></div></div>
           </div>
         </div>
 
@@ -718,8 +718,8 @@
             Co-Program Chairs
           </div>
           <div class="member-cards">
-            <div class="member-card"><div class="member-avatar chair"><span>HJ</span></div><div class="member-info"><strong>Hanjung Lee</strong><span>Sungkyunkwan University (SKKU)</span></div></div>
-            <div class="member-card"><div class="member-avatar chair"><span>YY</span></div><div class="member-info"><strong>Yu-Yun Chang</strong><span>National Chengchi University (NCCU)</span></div></div>
+            <div class="member-card"><div class="member-avatar chair"><span>HJ</span><img src="images/committee/Hanjung Lee.jpg" alt="Hanjung Lee"/></div><div class="member-info"><strong>Hanjung Lee</strong><span>Sungkyunkwan University (SKKU)</span></div></div>
+            <div class="member-card"><div class="member-avatar chair"><span>YY</span><img src="images/committee/Yu-Yun Chang.jpg" alt="Yu-Yun Chang"/></div><div class="member-info"><strong>Yu-Yun Chang</strong><span>National Chengchi University (NCCU)</span></div></div>
           </div>
 
           <div class="committee-group-title mt-2">
@@ -727,7 +727,7 @@
             Program Vice Chair
           </div>
           <div class="member-cards">
-            <div class="member-card"><div class="member-avatar chair"><span>OK</span></div><div class="member-info"><strong>Okgi Kim</strong><span>Gyeongkuk National University</span><em>Facilitating communication with the ISLI publication team</em></div></div>
+            <div class="member-card"><div class="member-avatar chair"><span>OK</span><img src="images/committee/Okgi Kim.jpg" alt="Okgi Kim"/></div><div class="member-info"><strong>Okgi Kim</strong><span>Gyeongkuk National University</span><em>Facilitating communication with the ISLI publication team</em></div></div>
           </div>
         </div>
 
@@ -738,9 +738,9 @@
             Organization Committee
           </div>
           <div class="member-cards">
-            <div class="member-card"><div class="member-avatar"><span>JK</span></div><div class="member-info"><strong>Jong-Bok Kim</strong><em>Co-Chair</em><span>Kyung Hee University</span></div></div>
-            <div class="member-card"><div class="member-avatar"><span>CL</span></div><div class="member-info"><strong>Charlene Lee</strong><em>Co-Chair</em><span>National Taiwan University</span></div></div>
-            <div class="member-card"><div class="member-avatar"><span>SH</span></div><div class="member-info"><strong>Shu-Kai Hsieh</strong><span>National Taiwan University</span></div></div>
+            <div class="member-card"><div class="member-avatar"><span>JK</span><img src="images/committee/Jong-Bok Kim.jpg" alt="Jong-Bok Kim"/></div><div class="member-info"><strong>Jong-Bok Kim</strong><em>Co-Chair</em><span>Kyung Hee University</span></div></div>
+            <div class="member-card"><div class="member-avatar"><span>CL</span><img src="images/committee/Charlene Lee.jpg" alt="Charlene Lee"/></div><div class="member-info"><strong>Charlene Lee</strong><em>Co-Chair</em><span>National Taiwan University</span></div></div>
+            <div class="member-card"><div class="member-avatar"><span>SH</span><img src="images/committee/Shu-Kai Hsieh.png" alt="Shu-Kai Hsieh"/></div><div class="member-info"><strong>Shu-Kai Hsieh</strong><span>National Taiwan University</span></div></div>
           </div>
         </div>
 
@@ -755,7 +755,9 @@
             <div class="member-card"><div class="member-avatar student"><span>JL</span></div><div class="member-info"><strong>Jessica Thach-Thao Le</strong><span>PhD Student, Graduate Institute of Linguistics, National Taiwan University</span></div></div>
           </div>
         </div>
-        
+
+      </div>
+    </section>
 
     <!-- ══════════════════ FAQ ════════════════════════════════════ -->
     <section id="faq" class="section section-alt">
@@ -797,7 +799,7 @@
               <span>When will the submission portal open?</span>
               <svg class="faq-arrow" viewBox="0 0 22 22" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" width="20" height="20"><polyline points="6 9 12 15 18 9"/></svg>
             </button>
-            <div class="faq-a"><div class="faq-a-inner">The submission portal (EasyChair or CMT — to be confirmed) will open and be linked from the Submission Guidelines page closer to the August 1, 2026 deadline.</div></div>
+            <div class="faq-a"><div class="faq-a-inner">The submission portal (CMT) will open and be linked from the Submission Guidelines page closer to the August 1, 2026 deadline.</div></div>
           </div>
 
           <div class="faq-item">
@@ -888,7 +890,7 @@
         <p class="footer-prev-line">
           <a href="https://vlsp.org.vn/paclic2025/" target="_blank" rel="noopener">PACLIC 39 (Hanoi, 2025)</a>
           &nbsp;·&nbsp;
-          <a href="https://sites.google.com/view/paclic38" target="_blank" rel="noopener">PACLIC 38 (Seoul, 2024)</a>
+          <a href="https://sites.google.com/view/paclic38" target="_blank" rel="noopener">PACLIC 38 (Tokyo, 2024)</a>
           &nbsp;·&nbsp;
           <a href="https://paclic2023.github.io/" target="_blank" rel="noopener">PACLIC 37 (Hong Kong, 2023)</a>
         </p>
